group 'dev.britannio.in_app_review'
version '1.0-SNAPSHOT'

buildscript {
    ext.kotlin_version = '2.2.0'
    repositories {
        google()
        mavenCentral()
    }

    dependencies {
        classpath 'com.android.tools.build:gradle:8.11.1'
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
    }
}

allprojects {
    repositories {
        google()
        mavenCentral()
    }
}

apply plugin: 'com.android.library'
apply plugin: 'kotlin-android'

android {
    // Conditional for compatibility with AGP <4.2.
    if (project.android.hasProperty("namespace")) {
      namespace 'dev.britannio.in_app_review'
    }

    compileSdkVersion 36

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }

    sourceSets {
        main.java.srcDirs += 'src/main/kotlin'
    }

    defaultConfig {
        minSdkVersion 16
    }
    dependencies {
        // Release notes: https://developer.android.com/reference/com/google/android/play/core/release-notes-in_app_reviews
        implementation 'com.google.android.play:review:2.0.2'
        // Release notes: https://developers.google.com/android/guides/releases
        implementation 'com.google.android.gms:play-services-base:18.7.2'


    }
}
